# primitive-snake-algorithm

./: .gitignore  CMakeLists.txt  README.md  temp.cpp  框架.drawio
etchlib/: concepts.hpp  type_traits.hpp
etchlib/graph/: AStar.hpp  concepts.hpp  functional.hpp  graph.hpp  type_traits.hpp
etchlib/graph/path/: a_star.hpp  concepts.hpp  path.hpp  type_traits.hpp
etchlib/test/: compile_test.cpp
include/: common.hpp  map.hpp  snake.hpp
src/: find_path.cpp  io.cpp  main.cpp  visual.cpp
